--- a/style.css
+++ b/style.css
@@ -35,4 +35,24 @@ body:before{
     background: linear-gradient(to top, rgb(0, 0, 0, 0.15), rgb(225, 225, 255, 0.15));
     border-radius: 12px;
     backdrop-filter: blur(100px);
+    padding: 20px;
 }
+
+/* INPUT CONTAINER */
+.city-input{
+    width: 100px;
+    padding: 10px 16px;
+    border-radius: 99px;
+    border: 3px solid transparent;
+    background: rgb(0, 0, 0, 0.15);
+    outline: none;
+    font-weight: 500;
+    transition: 0.25s border;
+}
+.city-input:focus{
+    border: 3px solid rgb(0, 0, 0, 0.15); 
+}
+.city-input::placeholder{
+    color: rgb(225, 225, 255, 0.75)
+}
+/* END INPUT CONTAINER */
