--- a/style.css
+++ b/style.css
@@ -6,6 +6,7 @@
     box-sizing: border-box;
     font-family: "Poppins", serif;
     color: white;
+    font-weight: 600;
 }
 
 body{
@@ -27,6 +28,12 @@ body:before{
     backdrop-filter: blur(10px);
 }
 
+/* UTILITIES */
+.regular-txt{
+    font-weight: 400;
+}
+/* END UTILITIES" */
+
 .main-container{
     
     width: 300px;
@@ -42,6 +49,7 @@ body:before{
 
 .input-container{
     position: relative;
+    margin-bottom: 25px;
 }
 
 .city-input{
@@ -73,3 +81,24 @@ body:before{
     cursor: pointer;
 }
 /* END INPUT CONTAINER */
+
+/* SECTION: WEATHER INFO */
+.weather-info{
+    
+
+}
+
+.location-date-container{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.location{
+
+    display: flex;
+    align-items: center;
+    gap: 6px;
+
+}
+/* END SECTION: WEATHER INFO */
