--- a/style.css
+++ b/style.css
@@ -84,7 +84,9 @@ body:before{
 
 /* SECTION: WEATHER INFO */
 .weather-info{
-    
+    display: flex;
+    flex-direction: column;
+    gap: 25px;
 
 }
 
@@ -95,10 +97,38 @@ body:before{
 }
 
 .location{
-
     display: flex;
     align-items: center;
     gap: 6px;
-
 }
+
+.weather-summary-container{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+.weather-summary-img{
+    width: 120px;
+    height: 120px;
+}
+.weather-summary-info{
+    text-align: end;
+}
+
+.weather-conditions-container{
+    display:flex;
+    justify-content: space-between;
+}
+
+.condition-item{
+    display: flex;
+    align-items: center;
+    gap: 6px;
+}
+
+.condition-item span{
+    font-size: 30px;
+}
+
+
 /* END SECTION: WEATHER INFO */
