Weather Display Finished

--- a/style.css
+++ b/style.css
@@ -130,5 +130,45 @@ body:before{
     font-size: 30px;
 }
 
+.forecast-items-container{
+    display: flex;
+    gap: 15px;
+    overflow-x: scroll;
+    padding-bottom: 12px;
 
+}
+
+.forecast-items-container::-webkit-scrollbar{
+    height: 12px;
+}
+
+.forecast-items-container::-webkit-scrollbar-track{
+    background: rgb(225, 225, 255, 0.1);
+    border-radius: 99px;
+}
+
+.forecast-items-container::-webkit-scrollbar-thumb{
+    background: rgb(0, 0, 0, 0.2);
+    border-radius: 99px;
+}
+
+.forecast-item {
+    min-width: 70px;
+    background: rgb(225, 225, 255, 0.1);
+    display: flex;
+    flex-direction: column;
+    gap: 6px;
+    padding: 10px;
+    align-items: center;
+    border-radius: 12px;
+    transition: 0.3s background;
+}
+.forecast-item:hover{
+    background: rgb(225, 225, 255, 0.15);
+}
+
+.forecast-item-img{
+    width: 35px;
+    height: 35px;
+}
 /* END SECTION: WEATHER INFO */
