--- a/style.css
+++ b/style.css
@@ -172,3 +172,20 @@ body:before{
     height: 35px;
 }
 /* END SECTION: WEATHER INFO */
+
+/* SECTION: MESSAGE*/
+.section-message{
+    display:flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    gap: 15px;
+    margin-top: 25%;
+    
+}
+.message-img{
+    height: 180px;
+    width: fit-content;
+}
+
+/* END SECTION: MESSAGE*/
