not found message, search bar, search button and its functions to validate. Also a weather API was implemented

--- a/style.css
+++ b/style.css
@@ -181,9 +181,9 @@ body:before{
     text-align: center;
     gap: 15px;
     margin-top: 25%;
-    
+
 }
-.message-img{
+.section-message img{
     height: 180px;
     width: fit-content;
 }
